[package]
name = "tyrion"
version = "0.3.7"
edition = "2021"

[lib]
name = "tyrion"
path = "src/lib.rs"

[[bin]]
name = "tyrion"
path = "src/main.rs"

[dependencies]
cookie = "0.17"
cookie_store = "0.20"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies", "multipart", "native-tls", "rustls-tls"] }
serde_json = "1.0"
ipnet = "2.9"
time = "0.3"
